# richmond-common

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  JOURNAL.md  README.md  requirements.txt
.claude/: launch.json  settings.json
.github/: FUNDING.yml
docs/: AI-PARKING-LOT.md  ARCHITECTURE.md  BUSINESS-MODEL.md  CHAT-SYSTEM-PROMPT.md  DATA-SOURCES.md  DECISIONS.md  JOURNAL.md  PARKING-LOT.md  PROJECT-SPEC.md  SPRINT-ARCHIVE.md  pipeline-diagram.md  pipeline-manifest.yaml
mcp/netfile/: README.md  pyproject.toml
mcp/netfile/netfile_mcp/: __init__.py  agencies.json  client.py  registry.py  server.py
mcp/netfile/tests/: test_client.py  test_registry.py  test_server.py
scripts/: extract-districts.ts
src/: CLAUDE.md  appointment_extractor.py  archive_center_discovery.py  backfill_attachments.py  backfill_raw_text.py  batch_classify_proceeding.py  batch_embed.py  batch_extract.py  batch_recategorize.py  batch_scan.py  batch_summarize.py  bias_audit.py  bias_signals.py  bio_generator.py  calaccess_client.py  change_detector.py  city_config.py  cloud_pipeline.py  comment_generator.py  commission_roster_scraper.py  community_voice_extractor.py  completeness_monitor.py  conflict_scanner.py  contribution_enricher.py  contributor_classifier.py  council_profiles.py  courts_scraper.py  data_quality_checks.py  data_sync.py  db.py  decision_briefing.py  decision_queue.py  deploy_schema.py  elections_client.py  embedding_generator.py  escribemeetings_enricher.py  escribemeetings_scraper.py  escribemeetings_to_agenda.py  extract_agenda.py  extraction.py  (+52 more)
tests/: conftest.py  (+97 more)
(+455 files in other folders)
